sandbox/output
NormalNumberHandler.java:1: error: NormalNumberHandler is not abstract and does not override abstract method handle(int) in Handler
public class NormalNumberHandler implements Handler {
       ^
1 error
